bug fixes for first release
1. When all filter values are removed the filter icon is made transparent and all layer values are made visible. For consistency, the dropdown remains empty at any time during this "default filter" active stage.

2. Update the css (color/transparency) depending on whether filter is active or not.

3. When a layer is invisible, but a filter is then set of the layer through the Filter panel, the eye + filter icon is toggle back on.

4. Remove setting the "filterActive" variable -- not  needed.

5. Fix the positioning of the layer detail "remove" toggle button.

--- a/src/css/map-view.css
+++ b/src/css/map-view.css
@@ -909,6 +909,12 @@ represents 1 unit of the given distance measurement. */
           );
         }
       }
+
+      .icon-filter--active {
+        fill: transparent;
+        color: var(--portal-col-neutral-4, currentColor);
+        background-color: transparent;
+      }
     }
 
     .layer-item__settings {
@@ -1029,6 +1035,7 @@ represents 1 unit of the given distance measurement. */
   color: var(--portal-col-neutral-6);
   font-size: 1rem;
   height: 2rem;
+  justify-self: end; /* end aligns the button to the right within its column */
   margin-right: 1rem;
   width: 2rem;
 }
